--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-gltf-model src="material/scene.gltf" position="0 -1 -4" animation="property: rotation; to: 0 360 0; loop: true; dur:4500"> </a-gltf-model>
+      <a-plane position="0 0 -4.5" rotation="-90 0 0" width="3.6" height="3.6" color="#BCBABE"></a-plane>
+      <a-sky color="#F1F1F2"></a-sky>
     </a-scene>
   </body>
 </html>
