--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <a-scene>
-      <a-gltf-model src="material/scene.gltf" position="0 -1 -4" animation="property: rotation; to: 0 360 0; loop: true; dur:4500"> </a-gltf-model>
+      <a-gltf-model src="material/ak_uterus110422.gltf" position="0 -1 -4" animation="property: rotation; to: 0 360 0; loop: true; dur:4500"> </a-gltf-model>
       <a-plane position="0 0 -4.5" rotation="-90 0 0" width="3.6" height="3.6" color="#BCBABE"></a-plane>
       <a-sky color="#F1F1F2"></a-sky>
     </a-scene>
